# edupal-pro

./: README.md  docker-compose.dev.yml  docker-compose.yml  index.html  makefile
agent/: go.mod  go.sum  main.go
agent/dal/: init.go
agent/dal/model/: question.gen.go  questiontrace.gen.go
agent/dal/mysql/: data.go  init.go
agent/dal/query/: gen.go  question.gen.go  questiontrace.gen.go
agent/dal/rabbitmq/: init.go
agent/handler/: log.go  question.go
agent/services/question/: gen.go  prompt.go  re.go
backend/: pyproject.toml
backend/app/: database.py  main.py  middlewares.py  models.py  placeholder.py  rabbitmq.py
backend/app/routes/question/: question.py  question_schemas.py
backend/app/routes/user/: user.py  user_schemas.py
backend/app/utils/: casbin_utils.py  db.py  jwt_utils.py
deploy/dev/: dockerfile.agent  dockerfile.backend  dockerfile.frontend
deploy/prod/: dockerfile.agent  dockerfile.backend  dockerfile.frontend
docs/: 开题报告.docx
frontend/: .dockerignore  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: question.ts  user.ts
frontend/src/components/: dnd.tsx  mode-toggle.tsx
frontend/src/components/dialog/: QuestionDialog.tsx  TestpaperDialog.tsx
frontend/src/components/ui/: my-questiontype.tsx  (+1 more)
frontend/src/configs/: host.ts
frontend/src/layouts/: index.tsx
frontend/src/modules/: stores.ts
frontend/src/pages/: Home.tsx
frontend/src/router/: index.ts
frontend/src/types/: Options.ts
frontend/src/utils/: path.ts  request.ts
(+41 files in other folders)
